--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Любители Истории</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -41,11 +41,108 @@
     </section>
     <!-- /.header__mobile-menu-hidden -->
     <section class="background">
-        <img src="img/background.jpg" alt="Icon: Books Image" class="background__image">
+        <div class="background__image" ></div>
     </section>
     <!-- /.background-image -->
+    <section class="hero">
+        <div class="container hero__container">
+            <div class="hero-left">
+                <a href="#" class="hero__menu-text-one">Уроки</a>
+                <a href="#" class="hero__menu-text-two">История</a>
+                <a href="#" class="hero__menu-text-two">Обществознание</a>
+                <a href="#" class="hero__menu-text-one">ЕГЭ/ОГЭ</a>
+                <a href="#" class="hero__menu-text-two">История</a>
+                <a href="#" class="hero__menu-text-two">Обществознание</a>
+                <a href="#" class="hero__menu-text-one">Олимпиады</a>
+                <a href="#" class="hero__menu-text-two">История</a>
+                <a href="#" class="hero__menu-text-two">Обществознание</a>
+                <a href="#" class="hero__menu-text-one">Другое</a>
+                <a href="#" class="hero__menu-text-two">Новости</a>
+                <a href="#" class="hero__menu-text-two">Страничка обо мне</a>
+            </div>
+            <!-- /.hero-left -->
+            <div class="hero-right">
+                <div class="hero__greetings">
+                    <div class="hero__greetings-first">
+                        <span class="hero__greetings-text">Приветствие</span>
+                    </div>
+                    <!-- /.hero__greetings-first -->
+                    <div class="hero__greetings-second">
+                        <img src="img/avatar.png" alt="Icon: avatar" class="hero__greetings-avatar">
+                        <span class="hero__greetings-span">Приветствую Вас на сайте учителя истории и обществознания гимназии №5 города Рязани Рыбины Марии Сергеевны. Надеюсь, что предложенные материалы будут Вам полезны.</span>
+                    </div>
+                    <!-- /.hero__greetings-second -->
+                </div>
+                <!-- /.hero__greetings -->
+                <div class="hero__post">
+                    <div class="hero__post-meta">
+                        <span class="hero__post-date">12.12.2020</span>
+                        <span class="hero__post-category">Категория: <span class="hero__post-cat">История</span></span>
+                    </div>
+                    <div class="hero__post-content">
+                        Тут будет какой-то текст..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fa.
+                    </div>
+                    <!-- /.hero__post-content -->
+                </div>
+                <!-- /.hero__post -->
+
+
+                <div class="hero__post">
+                    <div class="hero__post-meta">
+                        <span class="hero__post-date">12.12.2020</span>
+                        <span class="hero__post-category">Категория: <span class="hero__post-cat">История</span></span>
+                    </div>
+                    <div class="hero__post-content">
+                        Тут будет какой-то текст..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fa.
+                    </div>
+                    <!-- /.hero__post-content -->
+                </div>
+                <!-- /.hero__post -->
+                <div class="hero__post">
+                    <div class="hero__post-meta">
+                        <span class="hero__post-date">12.12.2020</span>
+                        <span class="hero__post-category">Категория: <span class="hero__post-cat">История</span></span>
+                    </div>
+                    <div class="hero__post-content">
+                        Тут будет какой-то текст..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fa.
+                    </div>
+                    <!-- /.hero__post-content -->
+                </div>
+                <!-- /.hero__post -->
+                <div class="hero__post">
+                    <div class="hero__post-meta">
+                        <span class="hero__post-date">12.12.2020</span>
+                        <span class="hero__post-category">Категория: <span class="hero__post-cat">История</span></span>
+                    </div>
+                    <div class="hero__post-content">
+                        Тут будет какой-то текст..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fa.
+                    </div>
+                    <!-- /.hero__post-content -->
+                </div>
+                <!-- /.hero__post -->
+                <div class="hero__post">
+                    <div class="hero__post-meta">
+                        <span class="hero__post-date">12.12.2020</span>
+                        <span class="hero__post-category">Категория: <span class="hero__post-cat">История</span></span>
+                    </div>
+                    <div class="hero__post-content">
+                        Тут будет какой-то текст..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fa.
+                    </div>
+                    <!-- /.hero__post-content -->
+                </div>
+                <!-- /.hero__post -->
+
+
+
+            </div>
+            <!-- /.hero-right -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.hero -->
 
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
