--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <!-- /.header__mobile-menu-hidden -->
     <section class="background">
-        <div class="background__image" ></div>
+        <div class="background__image parallax-window" data-parallax="scroll" data-image-src="img/back-one.jpg"></div>
     </section>
     <!-- /.background-image -->
     <section class="hero">
