fix: parallax effect

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- /.hero -->
 
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/parallax.min.js"></script>
+    <script src="js/parallax.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
