--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.js"></script>
+    <script>
+        $(".background__image").parallax({imageSrc: 'img/back-one.jpg', speed: 0.0009, positionY: 'bottom'});
+    </script>
     <script src="js/main.js"></script>
 </body>
 </html>
