create: footer added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a href="#" class="hero__menu-text-two">Страничка обо мне</a>
             </div>
             <!-- /.hero-left -->
-            <div class="hero-right">
+            <div class="hero-right">            
                 <div class="hero__greetings">
                     <div class="hero__greetings-first">
                         <span class="hero__greetings-text">Приветствие</span>
@@ -132,8 +132,12 @@
                 </div>
                 <!-- /.hero__post -->
 
-
-
+                <footer class="hero__footer footer">
+                    <span class="footer__text">
+                        @ Все материалы можно свободно использовать или копировать
+                    </span> <!-- /.footer__text -->
+                </footer>
+                <!-- /.hero__footer -->
             </div>
             <!-- /.hero-right -->
         </div>
