--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Любители Истории</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="https://nobody-ctrl.github.io/rybinams/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://anastasia-petrova.com/rybinams/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -24,7 +26,7 @@
                 <img src="img/search-icon.svg" alt="Icon: Search Icon" class="header__search-icon">
             </div>
             <!-- /.header__search-block -->
-            <a href="#" class="header__name-block">
+            <a href="index.html" class="header__name-block">
                 <img src="img/icon.svg" alt="Icon: logo" class="header__icon">
                 <span class="header__name">Любители Истории</span>
             </a>
@@ -58,8 +60,8 @@
                 <a href="#" class="hero__menu-text-two">История</a>
                 <a href="#" class="hero__menu-text-two">Обществознание</a>
                 <a href="#" class="hero__menu-text-one">Другое</a>
-                <a href="#" class="hero__menu-text-two">Новости</a>
-                <a href="#" class="hero__menu-text-two">Страничка обо мне</a>
+                <a href="news.html" class="hero__menu-text-two">Новости</a>
+                <a href="about.html" class="hero__menu-text-two">Страничка обо мне</a>
             </div>
             <!-- /.hero-left -->
             <div class="hero-right">            
@@ -70,7 +72,7 @@
                     <!-- /.hero__greetings-first -->
                     <div class="hero__greetings-second">
                         <img src="img/avatar.png" alt="Icon: avatar" class="hero__greetings-avatar">
-                        <span class="hero__greetings-span">Приветствую Вас на сайте учителя истории и обществознания гимназии №5 города Рязани Рыбины Марии Сергеевны. Надеюсь, что предложенные материалы будут Вам полезны.</span>
+                        <span class="hero__greetings-span">Приветствую Вас на сайте учителя истории и обществознания Гимназии №5 города Рязани Рыбины Марии Сергеевны. Надеюсь, что предложенные материалы будут Вам полезны.</span>
                     </div>
                     <!-- /.hero__greetings-second -->
                 </div>
