fix: menu links

--- a/about.html
+++ b/about.html
@@ -35,12 +35,14 @@
     </header>
     <!-- /.header -->
     <section class="mobile-menu-hidden">
-        <a href="#" class="mobile-link">Уроки по истории</a>
-        <a href="#" class="mobile-link">Уроки по обществознанию</a>
-        <a href="#" class="mobile-link">ЕГЭ, ОГЭ по истории</a>
-        <a href="#" class="mobile-link">ЕГЭ, ОГЭ по обществознанию</a>
-        <a href="#" class="mobile-link">Олимпиады по истории</a>
-        <a href="#" class="mobile-link">Олимпиады по обществознанию</a>
+        <a href="materials.html?type=lesson&subject=history" class="mobile-link">Уроки по истории</a>
+        <a href="materials.html?type=lesson&subject=social" class="mobile-link">Уроки по обществознанию</a>
+        <a href="materials.html?type=exams&subject=history" class="mobile-link">ЕГЭ, ОГЭ по истории</a>
+        <a href="materials.html?type=exams&subject=social" class="mobile-link">ЕГЭ, ОГЭ по обществознанию</a>
+        <a href="materials.html?type=olymp&subject=history" class="mobile-link">Олимпиады по истории</a>
+        <a href="materials.html?type=olymp&subject=social" class="mobile-link">Олимпиады по обществознанию</a>
+        <a href="news.html" class="mobile-link">Новости</a>
+        <a href="about.html" class="mobile-link">Страничка обо мне</a>
     </section>
     <!-- /.header__mobile-menu-hidden -->
     <section class="background">
@@ -50,16 +52,16 @@
     <section class="hero">
         <div class="container hero__container">
             <div class="hero-left">
-                <a href="#" class="hero__menu-text-one">Уроки</a>
-                <a href="#" class="hero__menu-text-two">История</a>
-                <a href="#" class="hero__menu-text-two">Обществознание</a>
-                <a href="#" class="hero__menu-text-one">ЕГЭ/ОГЭ</a>
-                <a href="#" class="hero__menu-text-two">История</a>
-                <a href="#" class="hero__menu-text-two">Обществознание</a>
-                <a href="#" class="hero__menu-text-one">Олимпиады</a>
-                <a href="#" class="hero__menu-text-two">История</a>
-                <a href="#" class="hero__menu-text-two">Обществознание</a>
-                <a href="#" class="hero__menu-text-one">Другое</a>
+                <a href="" class="hero__menu-text-one">Уроки</a>
+                <a href="materials.html?type=lesson&subject=history" class="hero__menu-text-two">История</a>
+                <a href="materials.html?type=lesson&subject=social" class="hero__menu-text-two">Обществознание</a>
+                <a href="" class="hero__menu-text-one">ЕГЭ/ОГЭ</a>
+                <a href="materials.html?type=exams&subject=history" class="hero__menu-text-two">История</a>
+                <a href="materials.html?type=exams&subject=social" class="hero__menu-text-two">Обществознание</a>
+                <a href="" class="hero__menu-text-one">Олимпиады</a>
+                <a href="materials.html?type=olymp&subject=history" class="hero__menu-text-two">История</a>
+                <a href="materials.html?type=olymp&subject=social" class="hero__menu-text-two">Обществознание</a>
+                <a href="" class="hero__menu-text-one">Другое</a>
                 <a href="news.html" class="hero__menu-text-two">Новости</a>
                 <a href="about.html" class="hero__menu-text-two">Страничка обо мне</a>
             </div>
